<resources>
    <string name="app_name">Canteen School</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Canteen School</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_share">Share</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_sign_up">Sign up</string>
    <string name="nama">Nama ...</string>
    <string name="username">Email ...</string>
    <string name="password">Password (min-6) ..</string>
    <string name="KonfigurasiPass">Konfigurasi Password ...</string>
    <string name="action_exit">Exit</string>
    <string name="admob_app_id">ca-app-pub-3916205593386444~4852919008</string>
    <string name="banner_ad_unit_id">ca-app-pub-3916205593386444/4192791065</string>
    <string name="menu_info">Info</string>
    <string name="menu_user">Account</string>
    <string-array name="jk">
        <item>Pilih Jenis Kelamin</item>
        <item>Laki-Laki</item>
        <item>Perempuan</item>
    </string-array>

    <string-array name="level">
        <item>Pilih Jenis User</item>
        <item>Penjual</item>
        <item>Pembeli</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="makanan">Warung</string>
    <string name="harga">Harga : Rp.</string>
    <string name="menu_histori">Histori</string>
    <string name="menu_tambah">Tambah</string>
    <string name="versi">Apk Version : 1.0</string>
    <string name="tambah_data">Tambah Menu</string>
    <string name="add_image">Masukkan Gambar</string>
    <string name="tambah">Tambahkan</string>
    <string name="warning">Jika Belum Punya akun Clik Tombol + dibawah Untuk Mendaftar!!</string>
    <string name="shop">Keranjang</string>

</resources>
