<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_histori"
            android:icon="@drawable/ic_menu_histori"
            android:title="@string/menu_histori" />

        <item
            android:id="@+id/nav_user"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/menu_user" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_info"
                android:icon="@drawable/ic_error_outline_black_24dp"
                android:title="@string/menu_info" />
        </menu>
    </item>

</menu>
