<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/kotak"
    tools:context=".Tambah">

    <LinearLayout
        android:id="@+id/atas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/coba"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:id="@+id/sign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:background="@color/blue"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/tambah_data"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/add_menu_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/margin"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/addImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="@dimen/margin"
                android:src="@color/blue" />
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_image"/>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:background="@drawable/ritangel"
            android:paddingTop="@dimen/input">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_menu_nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin"
                android:hint="@string/nama"
                android:maxLines="1"
                android:paddingHorizontal="@dimen/margin" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:background="@drawable/ritangel"
            android:paddingTop="@dimen/input">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_menu_harga"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin"
                android:hint="@string/harga"
                android:maxLines="1"
                android:inputType="numberDecimal"
                android:paddingHorizontal="@dimen/margin" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/add_menu_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/atas"
        android:layout_margin="@dimen/margin"
        android:background="@drawable/button"
        android:text="@string/tambah"
        android:textColor="@color/white" />

</RelativeLayout>