<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/kotak"
    tools:context=".MenuActivity">

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:background="@drawable/coba"
        android:gravity="center"
        android:padding="@dimen/margin"
        android:text="@string/makanan"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:background="@drawable/coba">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:background="@color/white">

            <ImageView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_margin="12dp"
                android:src="@drawable/ic_launcher_background" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="@dimen/margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/action_sign_in"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/harga"
                        android:textSize="15sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="20.000" />
                </LinearLayout>

                <ImageButton
                    android:id="@+id/btn_Beli"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="right"
                    android:layout_margin="10dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_add_shopping_cart_black_24dp" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
<!--    <LinearLayout-->
<!--        android:id="@+id/bs_ll"-->
<!--        android:orientation="vertical"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="340dp"-->
<!--        app:behavior_hideable="true"-->
<!--        app:behavior_peekHeight="60dp"-->
<!--        app:layout_behavior="android.support.design.widget.BottomSheetBehavior"-->
<!--        >-->
<!--        <TextView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="60dp"-->
<!--            android:background="@color/twoh_accent"-->
<!--            android:gravity="center"-->
<!--            android:text="Peek Content"-->
<!--            android:textColor="@android:color/white" />-->

<!--        <LinearLayout-->
<!--            android:background="@color/twoh_primary_light"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent">-->
<!--            <ImageView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"-->
<!--                android:gravity="center"-->
<!--                android:src="@drawable/header"-->
<!--                />-->
<!--        </LinearLayout>-->
<!--    </LinearLayout>-->
</RelativeLayout>